--- a/css/amortizacion.css
+++ b/css/amortizacion.css
@@ -1,7 +1,7 @@
 :root{
-    --fondo:#70307a;
-    --primario:#fd56fa;
-    --fuente:#700257;
+    --fondo:#a351da;
+    --primario:#7f2891;
+    --fuente:#f7f3f6;
     --fuente-claro:#e9dee1;
 
 }
