--- a/css/anualidadesadelantadas.css
+++ b/css/anualidadesadelantadas.css
@@ -1,8 +1,9 @@
 :root{
-    --fondo:#a551e2;
-    --primario:#8124bf;
-    --fuente:#f2f2f2;
-    --fuente-claro:#e9dee1;
+    --fondo:#873fc1;
+    --primario:#7d2dac;
+    --fuente:rgb(241, 234, 234);
+    --fuente-claro:#f0f0ef;
+  
 
 }
 
@@ -26,7 +27,7 @@ main{
 .contenedor{
     width: 315px;
     height: 160px;
-    background-color: var(--primario);
+    background-color: var(--fuente-claro);
     border-radius: 12px;
     border: 12px;
     padding: 12px;
@@ -42,11 +43,11 @@ main{
 }
 
 .contenedor:hover{
-    box-shadow: 5px 5px 50px var(--fuente-claro);
+    box-shadow: 5px 5px 50px var(--fuente);
 }
 
 .contenedor a img{
-    width: 85%;
+    width: 100%;
     border-radius: 8px;
 }
 
@@ -76,17 +77,17 @@ form{
 input{
     width: 100px;
     height: 50px;
-    border: 1px solid var(--funte);
+    border: 1px solid var(--fuente);
     border-radius: 8px;
     font-size: 20px;
     padding-left: 17px;
     margin: 5px;
 }
 
-#res-ANvencidas{
+#res-AnualidadesAdelantadas{
     width: 120px;
     height: 50px;
-    border: 1px solid var(--funte);
+    border: 1px solid var(--fuente);
     border-radius: 8px;
     font-size: 20px;
     padding-left: 17px;
@@ -94,8 +95,8 @@ input{
     text-align: center;
     padding-top: 5px;
     box-sizing: border-box;
-    background-color: var(--fuente);
-    color: var(--primario);
+    background-color: var(--primario);
+    color: var(--fuente);
 }
 
 input:focus{
@@ -107,16 +108,16 @@ input:focus{
     display: block;
     width: 120px;
     height: 50px;
-    background-color: var(--primario);
+    background-color: var(--fuente-claro);
     border-radius: 8px;
     text-align: center;
     padding-top: 10px;
     box-sizing: border-box;
-    color: var(--fondo);
+    color: var(--fuente);
     text-decoration: none;
 }
 
 .boton-regresar:hover{
-    box-shadow: 5px 5px 50px var(--fuente-claro);
+    box-shadow: 5px 5px 50px var(--fuente);
 
 }
