--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root{
-    --fondo:#70307a;
-    --primario:#fd56fa;
-    --fuente:#700257;
+    --fondo:#ac54e7;
+    --primario:#851ec1;
+    --fuente:#f1ecf0;
     --fuente-claro:#e9dee1;
 
 }
