--- a/css/valoractual.css
+++ b/css/valoractual.css
@@ -1,7 +1,7 @@
 :root{
-    --fondo:#70307a;
-    --primario:#fd56fa;
-    --fuente:#700257;
+    --fondo:#a460e4;
+    --primario:#6d2ea4;
+    --fuente:#f9f7f9;
     --fuente-claro:#e9dee1;
 
 }
