--- a/css/adelantada.css
+++ b/css/adelantada.css
@@ -1,7 +1,7 @@
 :root{
-    --fondo:#70307a;
-    --primario:#fd56fa;
-    --fuente:#700257;
+    --fondo:#a25cdc;
+    --primario:#7c2ba8;
+    --fuente:#f4f4f4;
     --fuente-claro:#e9dee1;
 
 }
