--- a/css/anPeriodo.css
+++ b/css/anPeriodo.css
@@ -1,7 +1,7 @@
 :root{
-    --fondo:#a551e2;
-    --primario:#8124bf;
-    --fuente:#f2f2f2;
+    --fondo:#9a4acf;
+    --primario:#6e2aaa;
+    --fuente:#f4eef3;
     --fuente-claro:#e9dee1;
 
 }
@@ -83,7 +83,7 @@ input{
     margin: 5px;
 }
 
-#res-ANvencidas{
+#res-anPeriodo{
     width: 120px;
     height: 50px;
     border: 1px solid var(--funte);
