--- a/css/anuadelantadas.css
+++ b/css/anuadelantadas.css
@@ -1,7 +1,7 @@
 :root{
-    --fondo:#70307a;
-    --primario:#fd56fa;
-    --fuente:#700257;
+    --fondo:#9a4acf;
+    --primario:#6e2aaa;
+    --fuente:#f4eef3;
     --fuente-claro:#e9dee1;
 
 }
